# ni-traktor-kontrol-f1

./: README.md  devinfo.md
driver/: .clang-format  .clang-tidy  .gitignore  README.md  meson.build  meson_options.txt
driver-osc/: .clang-format  .gitignore  CMakeLists.txt  README.md  doxyfile
driver-osc/doc/: nsm_client_hello.md
driver-osc/src/: CMakeLists.txt  F1HidDev.cpp  F1HidDev.hpp  F1InputState.cpp  F1InputState.hpp  JackClient.cpp  JackClient.hpp  NonPeer.cpp  NonPeer.hpp  NonSessionHandler.cpp  NonSessionHandler.hpp  NonSignal.hpp  NonSignalConnector.cpp  NonSignalConnector.hpp  NonSignalList.hpp  config.h.in  debug.hpp
driver-osc/src/exe/: CMakeLists.txt  debug.cpp  nsm_test.cpp  osc_driver.cpp  test_jack.cpp
driver-osc/test/: CMakeLists.txt  NonPeer.cpp  NonSessionHandler.cpp  NonSignalConnector.cpp  test.hpp
driver/src/: devtest.cpp  main.cpp  meson.build
driver/src/io/: FileDescriptor.hpp  HidDevice.cpp  HidDevice.hpp  JackWrapper.cpp  JackWrapper.hpp  MidiEvent.cpp  MidiEvent.hpp  MidiStream.cpp  MidiStream.hpp  Ringbuffer.hpp  RingbufferIterator.cpp  RingbufferIterator.hpp  meson.build
driver/src/tkf1/: F1Device.cpp  F1Device.hpp  IOMapper.cpp  IOMapper.hpp  meson.build
driver/test/: meson.build
driver/test/io/: FileDescriptor.cpp  MidiEvent.cpp  MidiStream.cpp  Ringbuffer.cpp  RingbufferReadIterator.cpp
driver/test/tkf1/: F1Device.cpp
hid-messages/: INPUT-PROTOCOL.md  MESSAGES.md  MESSAGES.okular  features.md  outputs.md  protocol.md
hid-messages/faders/: fader-1-pull-bottom-top.txt  fader-1-pull-top-bottom.txt  fader-2-pull-bottom-top.txt  fader-2-pull-top-bottom.txt  fader-3-pull-bottom-top.txt  fader-3-pull-top-bottom.txt  fader-4-pull-bottom-top.txt  fader-4-pull-top-bottom.txt
hid-messages/knobs/: knob-1-turn-left-middle.txt  knob-1-turn-middle-left.txt  knob-1-turn-middle-right.txt  knob-1-turn-right-middle.txt  knob-2-turn-left-middle.txt  knob-2-turn-middle-left.txt  knob-2-turn-middle-right.txt  knob-2-turn-right-middle.txt  knob-3-turn-left-middle.txt  knob-3-turn-middle-left.txt  knob-3-turn-middle-right.txt  knob-3-turn-right-middle.txt  knob-4-turn-left-middle.txt  knob-4-turn-middle-left.txt  knob-4-turn-middle-right.txt  knob-4-turn-right-middle.txt
hid-messages/wheel/: wheel-left.txt  wheel-right.txt
