add_executable(debug
	debug.cpp
)
target_link_libraries(debug
	f1hid
	Threads::Threads
)

add_executable(nsm_test
	nsm_test.cpp
)
target_link_libraries(nsm_test
	nonsession
)

add_executable(osc_driver
	osc_driver.cpp
)
target_compile_features(osc_driver
	PUBLIC
		cxx_std_17
)
target_link_libraries(osc_driver
	f1hid
	nonsession
)

add_executable(jack_test
	test_jack.cpp
)
target_include_directories(jack_test
	PUBLIC
		..
)
target_compile_features(jack_test
	PUBLIC
		cxx_std_17
)
target_link_libraries(jack_test
	jack
	Threads::Threads
)
